--- a/src/app/design/frontend/rwd/default/template/leytech/ratingstars/form.phtml
+++ b/src/app/design/frontend/rwd/default/template/leytech/ratingstars/form.phtml
@@ -11,28 +11,31 @@
     <?php if ($this->getAllowWriteReviewFlag()): ?>
         <form action="<?php echo $this->getAction() ?>" method="post" id="review-form">
             <?php echo $this->getBlockHtml('formkey'); ?>
-            <fieldset>
-                <?php echo $this->getChildHtml('form_fields_before')?>
-                <h3><?php echo $this->__("You're reviewing:"); ?> <span><?php echo $this->escapeHtml($this->getProductInfo()->getName()) ?></span></h3>
+            <?php echo $this->getChildHtml('form_fields_before')?>
+            <h3><?php echo $this->__("You're reviewing:"); ?>
+                <span><?php echo $this->escapeHtml($this->getProductInfo()->getName()) ?></span>
+            </h3>
+
+            <div class="fieldset">
                 <?php if( $this->getRatings() && $this->getRatings()->getSize()): ?>
                     <h4><?php echo $this->__('How do you rate this product?') ?> <em class="required">*</em></h4>
                     <div id="product-review-stars">
-                    <?php $ratingValueMap = array(); ?>
-                    <?php foreach ($this->getRatings() as $_rating): ?>
-                        <dl>
-                            <dt class="label"><?php echo $this->escapeHtml($_rating->getRatingCode()) ?></dt>
-                            <dd class="rating-input value">
-                                <div class="rateYo" data-rating-id="<?php echo $_rating->getId() ?>"></div>
-                                <input type="hidden" name="ratings[<?php echo $_rating->getId() ?>]" id="<?php echo $this->escapeHtml($_rating->getRatingCode()) ?>_rating" value="" class="" />
-                            </dd>
-                        </dl>
-                        <?php
-                        // Create a value map of rating ids with associated option values and option ids
-                        foreach ($_rating->getOptions() as $_option) {
-                            $ratingValueMap[$_rating->getId()][$_option->getValue()] = $_option->getId();
-                        }
-                        ?>
-                    <?php endforeach; ?>
+                        <?php $ratingValueMap = array(); ?>
+                        <?php foreach ($this->getRatings() as $_rating): ?>
+                            <dl>
+                                <dt class="label"><?php echo $this->escapeHtml($_rating->getRatingCode()) ?></dt>
+                                <dd class="rating-input value">
+                                    <div class="rateYo" data-rating-id="<?php echo $_rating->getId() ?>"></div>
+                                    <input type="hidden" name="ratings[<?php echo $_rating->getId() ?>]" id="<?php echo $this->escapeHtml($_rating->getRatingCode()) ?>_rating" value="" class="" />
+                                </dd>
+                            </dl>
+                            <?php
+                            // Create a value map of rating ids with associated option values and option ids
+                            foreach ($_rating->getOptions() as $_option) {
+                                $ratingValueMap[$_rating->getId()][$_option->getValue()] = $_option->getId();
+                            }
+                            ?>
+                        <?php endforeach; ?>
                     </div>
                     <script type="text/javascript">
                         var valMap = JSON.parse('<?php echo json_encode($ratingValueMap); ?>');
@@ -53,29 +56,33 @@
                     <span id="input-message-box"></span>
                     <input type="hidden" name="validate_rating" class="validate-rating" value="" />
                 <?php endif; ?>
+
                 <ul class="form-list">
                     <li>
-                        <label for="nickname_field" class="required"><em>*</em><?php echo $this->__('Nickname') ?></label>
+                        <label for="review_field" class="required"><em>*</em><?php echo $this->__('Let us know your thoughts') ?></label>
                         <div class="input-box">
-                            <input type="text" name="nickname" id="nickname_field" class="input-text required-entry" value="<?php echo $this->escapeHtml($data->getNickname()) ?>" />
+                            <textarea name="detail" id="review_field" cols="5" rows="3" class="required-entry"><?php echo $this->escapeHtml($data->getDetail()) ?></textarea>
                         </div>
                     </li>
-                    <li>
+
+                    <li class="inline-label">
                         <label for="summary_field" class="required"><em>*</em><?php echo $this->__('Summary of Your Review') ?></label>
                         <div class="input-box">
                             <input type="text" name="title" id="summary_field" class="input-text required-entry" value="<?php echo $this->escapeHtml($data->getTitle()) ?>" />
                         </div>
                     </li>
-                    <li>
-                        <label for="review_field" class="required"><em>*</em><?php echo $this->__('Review') ?></label>
+
+                    <li class="inline-label">
+                        <label for="nickname_field" class="required"><em>*</em><?php echo $this->__("What's your nickname?") ?></label>
                         <div class="input-box">
-                            <textarea name="detail" id="review_field" cols="5" rows="3" class="required-entry"><?php echo $this->escapeHtml($data->getDetail()) ?></textarea>
+                            <input type="text" name="nickname" id="nickname_field" class="input-text required-entry" value="<?php echo $this->escapeHtml($data->getNickname()) ?>" />
                         </div>
                     </li>
+
                 </ul>
-            </fieldset>
+            </div>
             <div class="buttons-set">
-                <button type="submit" title="<?php echo $this->__('Submit Review') ?>" class="button"><span><span><?php echo $this->__('Submit Review') ?></span></span></button>
+                <button type="submit" title="<?php echo Mage::helper('core')->quoteEscape($this->__('Submit Review')) ?>" class="button"><span><span><?php echo $this->__('Submit Review') ?></span></span></button>
             </div>
         </form>
         <script type="text/javascript">
